--- a/tensorflow/examples/android/res/values/base-strings.xml
+++ b/tensorflow/examples/android/res/values/base-strings.xml
@@ -20,4 +20,6 @@
     <string name="activity_name_classification">TF Classify</string>
     <string name="activity_name_detection">TF Detect</string>
     <string name="activity_name_stylize">TF Stylize</string>
+    <string name="activity_name_test_stylize">Test Stylize</string>
+    <string name="activity_name_test_stylize_offical">Test Stylize Official</string>
 </resources>
